# gmail-mcp-server

./: .gitignore  Dockerfile  README.md  gmail_api.py  gmail_server.py  gmail_token_creator.py  google_apis.py  pyproject.toml  read_emails.py  search_emails.py  send_emails.py  smithery.yaml
